fixed footer alignment

--- a/resources/style.css
+++ b/resources/style.css
@@ -201,8 +201,8 @@ body {
 .bottom-right {
   background-color:rgba(255, 255, 255, 0.5);
   border-radius:.5em;
-  bottom:0;
-  position:absolute;
+  bottom:50px;
+  position:fixed;
   right:0; 
 }
 
